--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,8 +11,19 @@
     <div class="col-md-12">
       <h2>Items</h2>
       <ul class="list-group mb-4">
-        <!-- List the todo items here -->
+        {% for item in items %}
+        <li>{{ item.title }} - {{ item.status }}</li>
+        {% endfor %}
       </ul>
+      <form action="/add", method="post", class="form">
+        <div>
+          <label for="title">Enter the task: </label>
+          <input type="text" name="title" id="title" required>
+        </div>
+        <div>
+          <input type="submit" value="Submit Task">
+        </div>
+      </form>
     </div>
   </div>
 {% endblock %}
