Can Complete and Remove items, items are sorted
Now that items are sorted, a new function is used to generate the ID when adding items to the list. Without this, the same ID was being given to multiple items, as the newest item wasn't automatically at the end of the list. New functions have also been added to remove items from the list and to Complete items.

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -13,8 +13,13 @@
       <ul class="list-group mb-4">
         {% for item in items %}
         <li>{{ item.title }} - {{ item.status }}</li>
+        <ul>
+          <li><a href="/update/{{ item.id }}">Mark as completed</a></li>
+          <li><a href="/remove/{{ item.id }}">Remove item</a></li>
+        </ul>
         {% endfor %}
       </ul>
+      <h2>Add Item</h2>
       <form action="/add", method="post", class="form">
         <div>
           <label for="title">Enter the task: </label>
