Added Item class, updated app to use this
Item class is used to store information from the JSON response given by Trello. add_items has been updated to return a list of Items.  Index has been updated to reflect the field names from Item

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -13,7 +13,7 @@
       <ul class="list-group mb-4">
         {% for item in items %}
         <li class="list-group-item">
-          {{ item.title }} - {{ item.status }}
+          {{ item.name }} - {{ item.status }}
           <div class="button-group">
             <a class="btn btn-secondary btn-sm" role="button" href="/update/{{ item.id }}">Mark as completed</a>
             <a class="btn btn-secondary btn-sm" role="button" href="/remove/{{ item.id }}">Remove item</a>
