--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -14,6 +14,7 @@
         {% for item in items %}
         <li class="list-group-item">
           {{ item.name }} - {{ item.status }}
+          <br> {{ item.description }}
           <div class="button-group">
             <a class="btn btn-secondary btn-sm" role="button" href="/update/{{ item.id }}">Mark as completed</a>
             <a class="btn btn-secondary btn-sm" role="button" href="/remove/{{ item.id }}">Remove item</a>
@@ -26,6 +27,8 @@
         <div>
           <label for="title" class="form-group">Enter the task: </label>
           <input type="text" name="title" id="title" class="form-control" required>
+          <label for="description" class="form-group">Enter a description: </label>
+          <input type="text" name="description" id="description" class="form-control" required>
         </div>
         <div>
           <input type="submit" value="Submit Task" class="btn btn-primary">
