Completed items no longer have the "Mark as Completed" option

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -16,7 +16,9 @@
           {{ item.name }} - {{ item.status }}
           <br> {{ item.description }}
           <div class="button-group">
-            <a class="btn btn-secondary btn-sm" role="button" href="/update/{{ item.id }}">Mark as completed</a>
+            {% if item.status != "Done" %}
+              <a class="btn btn-secondary btn-sm" role="button" href="/update/{{ item.id }}">Mark as completed</a>
+            {% endif %}
             <a class="btn btn-secondary btn-sm" role="button" href="/remove/{{ item.id }}">Remove item</a>
           </div>
         </li>
