--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,7 +11,7 @@
     <div class="col-md-12">
       <h2>Items</h2>
       <ul class="list-group mb-4">
-        {% for item in items %}
+        {% for item in view_model.items %}
         <li class="list-group-item">
           {{ item.name }} - {{ item.status }}
           <br> {{ item.description }}
